examples/errors/ptr_as_int.alan
main(): proc
    x: byte;
    y: int;
{
    y = x + 42;
}
